# include-linkml

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  404.html  CONTRIBUTING.md  Makefile  README.md  about.yaml  config.public.mk  config.yaml  index.html  justfile  mkdocs.yml  project.Makefile  pyproject.toml  sitemap.xml  slack-test.txt
.cogs/: config.tsv  format.tsv  formats.json  note.tsv  sheet.tsv  validation.tsv
.github/: dependabot.yml
Address/: index.html
Aliquot/: index.html
Assay/: index.html
Biospecimen/: index.html
Boolean/: index.html
ClinicalTrial/: index.html
Condition/: index.html
Curie/: index.html
DataFile/: index.html
Dataset/: index.html
DatasetManifest/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
EnumArmAllocation/: index.html
EnumAvailability/: index.html
EnumClinicalDataSourceType/: index.html
EnumClinicalStudyDesign/: index.html
EnumConditionDataSource/: index.html
EnumConditionInterpretation/: index.html
EnumConditionStatus/: index.html
EnumContainerAvailability/: index.html
EnumDataAccess/: index.html
EnumDataCategory/: index.html
EnumDownSyndromeStatus/: index.html
EnumEthnicity/: index.html
EnumFamilyRelationship/: index.html
EnumFamilyType/: index.html
EnumGuidType/: index.html
EnumInterventionAssignmentStrategy/: index.html
EnumInterventionType/: index.html
EnumParticipantLifespanStage/: index.html
EnumPhenotypeInterpretation/: index.html
EnumPrimaryPurpose/: index.html
EnumProgram/: index.html
EnumRace/: index.html
EnumResearchDomain/: index.html
EnumSampleAvailability/: index.html
EnumSex/: index.html
EnumStudyCode/: index.html
EnumStudyDesign/: index.html
EnumTrialPhase/: index.html
EnumVitalStatus/: index.html
FamilialRelationship/: index.html
FamilialRelationshipType/: index.html
FamilyGroup/: index.html
Float/: index.html
HasAliases/: index.html
IncludePortalV1/: index.html
IncludeV2DataModel/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Organization/: index.html
Participant/: index.html
ParticipantDataFileManifest/: index.html
ParticipantSampleDataFileManifest/: index.html
Person/: index.html
PersonStatus/: index.html
Registry/: index.html
Relationship/: index.html
Sparqlpath/: index.html
String/: index.html
Study/: index.html
Thing/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
accessLimitations/: index.html
accessRequirements/: index.html
accessUrl/: index.html
access_url/: index.html
acknowledgments/: index.html
ageAtBiospecimenCollection/: index.html
ageAtConditionMeasureObservation/: index.html
ageAtConditionObservation/: index.html
ageAtFirstParticipantEngagement/: index.html
ageAtFirstPatientEngagement/: index.html
ageAtLastVitalStatus/: index.html
ageAtMeasurement/: index.html
age_at_biospecimen_collection/: index.html
(+835 files in other folders)
