[tool.poetry]
name = "linkml-poetry-gp-template"
version = "0.1.0"
description = "A template for LinkML projects using poetry and gen-project"
authors = ["Mark A. Miller <mamillerpa@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.1.24"
mkdocs = "^1.3.0"
rdflib = "^6.1.1"
jupyter = "^1.0.0"
schemasheets = "^0.1.10"
ontodev-cogs = "^0.3.3"

[tool.poetry.dev-dependencies]
linkml = "^1.1.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
