[tool.poetry]
name = "linkml-project-template"
version = "0.1.0"
description = "Enter description of your project here"
authors = ["Mark A. Miller <mamillerpa@gmail.com>"]
license = "MIT"
include = ["README.md", "src/linkml", "project"]

[tool.poetry.dependencies]
python = "^3.9"
linkml-runtime = "^1.3"
ontodev-cogs = "^0.3.3"
schemasheets = "^0.1.13"
oaklib = "^0.1.57"

[tool.poetry.dev-dependencies]
linkml = "^1.3"
mkdocs-material = "^8.2.8"
mkdocs-mermaid2-plugin = "^0.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["linkml", "mkdocs-material"]
